--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
     </header>
 
     <!-- 메인 베너 -->
-    <div id="main_banner" class="banner">
+    <div id="main_banner">
         <div id="slider">
-            <a href="#"><img src="img/banner/banner_1.png" alt="건강한 시니어 식단 출시"></a>
+            <!-- <a href="#"><img src="img/banner/banner_1.png" alt="건강한 시니어 식단 출시"></a>
             <a href="#"><img src="img/banner/banner_2.png" alt="든든 한 끼, 가성비 반찬"></a>
             <a href="#"><img src="img/banner/banner_3.png" alt="3월 한정, 봄 제철 반찬"></a>
             <a href="#"><img src="img/banner/banner_4.png" alt="문 앞까지 오는 정기식단"></a>
-            <a href="#"><img src="img/banner/banner_5.png" alt="신규회원 혜택"></a>
+            <a href="#"><img src="img/banner/banner_5.png" alt="신규회원 혜택"></a> -->
+            <a href="#"></a>
         </div>
         <div id="slider_btn">
-            <span class="prev"><img src="img/icon/icon-arrow-left-a3a3a3-24.svg"></span>
-            <span class="next"><img src="img/icon/icon-arrow-right-a3a3a3-24.svg"></span>
+            <span class="prev"></span>
+            <span class="next"></span>
         </div>
         <div id="slider_index">
             <span id="slider_index_current">1</span> | <span id="slider_index_total">5</span>
@@ -111,12 +112,12 @@
     </div>
 
     <div class="nav_more">
-        <button><span>더보기</span><img src="img/icon-arrow-down.svg" alt=""></button>
+        <button><span>더보기</span><img src="img/icon/icon-arrow-down.svg" alt=""></button>
     </div>
 
     <!-- 베너2 -->
     <div class="banner">
-        <img src="img/godo_banner1737962008.png" alt="정기식단 한눈에 보기">
+        <img src="img/banner/godo_banner1737962008.png" alt="정기식단 한눈에 보기">
     </div>
 
     <!-- 부담없는 알뜰 반찬 -->
@@ -125,7 +126,7 @@
             <h2>부담없는 알뜰 반찬</h2>
             <p>
                 착한 가격으로 챙기는 든든 한 끼
-                <a class="show_all">전체보기<img src="img/icon-arrow-right.svg" alt="전체보기"></a>
+                <a class="show_all">전체보기<img src="img/icon/icon-arrow-right-background-d9d9d9-18.svg" alt="전체보기"></a>
             </p>
 
         </div>
@@ -215,9 +216,9 @@
 
     <!-- 베너3 -->
     <div class="banner_3">
-        <img src="img/ddd.png" alt="">
-        <img src="img/sssss.png" alt="">
-        <img src="img/templite4.png" alt="">
+        <img src="img/banner/ddd.png" alt="">
+        <img src="img/banner/sssss.png" alt="">
+        <img src="img/banner/templite4.png" alt="">
     </div>
 
 
@@ -227,7 +228,7 @@
             <h2>어린이 반찬</h2>
             <p>
                 착한 가격으로 챙기는 든든 한 끼
-                <a class="show_all">전체보기<img src="img/icon-arrow-right.svg" alt="전체보기"></a>
+                <a class="show_all">전체보기<img src="img/icon/icon-arrow-right-background-d9d9d9-18.svg" alt="전체보기"></a>
             </p>
         </div>
         <div class="banchan_list banchan_list_rec">
@@ -317,7 +318,7 @@
 
     <!-- 배너4 -->
     <div class="banner">
-        <img src="img/templite1.png" alt="배송 가능 지역">
+        <img src="img/banner/templite1.png" alt="배송 가능 지역">
     </div>
 
     <!-- 이번주 정기식단 -->
@@ -326,7 +327,7 @@
             <h2>이번주 정기식단</h2>
             <p>
                 착한 가격으로 챙기는 든든 한 끼
-                <a class="show_all">전체보기<img src="img/icon-arrow-right.svg" alt="전체보기"></a>
+                <a class="show_all">전체보기<img src="img/icon/icon-arrow-right-background-d9d9d9-18.svg" alt="전체보기"></a>
             </p>
         </div>
         <div id="regular_container">
@@ -409,8 +410,8 @@
                 </div>
 
                 <div class="regular_list_arrow">
-                    <span class="pre"><img src="img/icon-arrow-left.svg" alt="">이전주 식단</span>
-                    <span class="next">다음주 식단<img src="img/icon-arrow-right2.svg" alt=""></span>
+                    <span class="pre"><img src="img/icon/icon-arrow-left-a3a3a3-24.svg" alt="">이전주 식단</span>
+                    <span class="next">다음주 식단<img src="img/icon/icon-arrow-right-a3a3a3-24.svg" alt=""></span>
                 </div>
 
                 <div class="regular_list_foot">
@@ -525,7 +526,7 @@
         </div>
         <div class="recommend_content">
             <div>
-                <img src="img/cp_image_0.png" alt="">
+                <img src="img/cp_image_0.png" alt="후기사진">
             </div>
             <div class="rec_right">
                 <div class="rec_right_header">
@@ -582,7 +583,7 @@
                     </div>
                 </div>
                 <div class="rec_btn">
-                    <button onclick=""><img src="img/icon-cart-0d5611.svg" alt="">장바구니에 한번에 담기</button>
+                    <button onclick=""><img src="img/icon/icon-cart-0d5611.svg" alt="">장바구니에 한번에 담기</button>
                 </div>
             </div>
         </div>
