--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="css/main.css" rel="stylesheet">
 
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.7.0.min.js"></script>
+    <script href="js/main.js"></script>
 </head>
 
 <body>
@@ -57,12 +58,12 @@
     <!-- 메인 베너 -->
     <div id="main_banner">
         <div id="slider">
-            <!-- <a href="#"><img src="img/banner/banner_1.png" alt="건강한 시니어 식단 출시"></a>
+            <a href="#"><img src="img/banner/banner_1.png" alt="건강한 시니어 식단 출시"></a>
             <a href="#"><img src="img/banner/banner_2.png" alt="든든 한 끼, 가성비 반찬"></a>
             <a href="#"><img src="img/banner/banner_3.png" alt="3월 한정, 봄 제철 반찬"></a>
             <a href="#"><img src="img/banner/banner_4.png" alt="문 앞까지 오는 정기식단"></a>
-            <a href="#"><img src="img/banner/banner_5.png" alt="신규회원 혜택"></a> -->
-            <a href="#"></a>
+            <a href="#"><img src="img/banner/banner_5.png" alt="신규회원 혜택"></a>
+            <!-- <a href="#"></a> -->
         </div>
         <div id="slider_btn">
             <span class="prev"></span>
@@ -74,7 +75,43 @@
     </div>
 
     <!-- nev -->
-    <div class="main_nav">
+    <div class="main_nav_1">
+        <ul>
+            <li><a href="sub.html" target="_self">
+                    <img src="img/mainNav/001051_main.png" alt="">
+                    <span>첫 만남</span>
+                </a></li>
+            <li><a href="sub.html" target="_self">
+                    <img src="img/mainNav/001062_main.png" alt="">
+                    <span>알뜰 반찬</span>
+                </a></li>
+            <li><a href="sub.html" target="_self">
+                    <img src="img/mainNav/001064_main.png" alt="">
+                    <span>봄맞이 반찬</span>
+                </a></li>
+            <li><a href="sub.html" target="_self">
+                    <img src="img/mainNav/001060_main.png" alt="">
+                    <span>신제품</span>
+                </a></li>
+            <li><a href="sub.html" target="_self">
+                    <img src="img/mainNav/001048_main.png" alt="">
+                    <span>아이 식단</span>
+                </a></li>
+            <li><a href="sub.html" target="_self">
+                    <img src="img/mainNav/001049_main.png" alt="">
+                    <span>가족식단</span>
+                </a></li>
+            <li><a href="sub.html" target="_self">
+                    <img src="img/mainNav/001003_main.png" alt="">
+                    <span>무침</span>
+                </a></li>
+            <li><a href="sub.html" target="_self">
+                    <img src="img/mainNav/001009_main.png" alt="">
+                    <span>볶음</span>
+                </a></li>
+        </ul>
+    </div>
+    <div class="main_nav_2">
         <ul>
             <li><a href="sub.html" target="_self">
                     <img src="img/mainNav/001051_main.png" alt="">
