--- a/index.html
+++ b/index.html
@@ -75,76 +75,14 @@
     </div>
 
     <!-- nev -->
-    <div class="main_nav_1">
+    <div class="main_nav" id="main_nav_1">
         <ul>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001051_main.png" alt="">
-                    <span>첫 만남</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001062_main.png" alt="">
-                    <span>알뜰 반찬</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001064_main.png" alt="">
-                    <span>봄맞이 반찬</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001060_main.png" alt="">
-                    <span>신제품</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001048_main.png" alt="">
-                    <span>아이 식단</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001049_main.png" alt="">
-                    <span>가족식단</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001003_main.png" alt="">
-                    <span>무침</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001009_main.png" alt="">
-                    <span>볶음</span>
-                </a></li>
+            
         </ul>
     </div>
-    <div class="main_nav_2">
+    <div class="main_nav" id="main_nav_2">
         <ul>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001051_main.png" alt="">
-                    <span>첫 만남</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001062_main.png" alt="">
-                    <span>알뜰 반찬</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001064_main.png" alt="">
-                    <span>봄맞이 반찬</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001060_main.png" alt="">
-                    <span>신제품</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001048_main.png" alt="">
-                    <span>아이 식단</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001049_main.png" alt="">
-                    <span>가족식단</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001003_main.png" alt="">
-                    <span>무침</span>
-                </a></li>
-            <li><a href="sub.html" target="_self">
-                    <img src="img/mainNav/001009_main.png" alt="">
-                    <span>볶음</span>
-                </a></li>
+            
         </ul>
     </div>
 
