--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="css/main.css" rel="stylesheet">
 
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.7.0.min.js"></script>
-    <script href="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </head>
 
 <body>
