add section_1 js

--- a/index.html
+++ b/index.html
@@ -75,16 +75,98 @@
     </div>
 
     <!-- nev -->
-    <div class="main_nav" id="main_nav_1">
-        <ul>
-            
-        </ul>
-    </div>
-    <div class="main_nav" id="main_nav_2">
-        <ul>
-            
-        </ul>
-    </div>
+    <nav>
+        <div class="main_nav" id="main_nav_1">
+            <ul>
+                <!-- navigation 0~7 -->
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_01.png" alt="">
+                        <span>첫 만남</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_02.png" alt="">
+                        <span>알뜰 반찬</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_03.png" alt="">
+                        <span>봄맞이 반찬</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_04.png" alt="">
+                        <span>신제품</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_05.png" alt="">
+                        <span>아이 식단</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_06.png" alt="">
+                        <span>가족식단</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_07.png" alt="">
+                        <span>무침</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_08.png" alt="">
+                        <span>볶음</span>
+                    </a></li>
+            </ul>
+        </div>
+        <div class="main_nav" id="main_nav_2">
+            <ul>
+                <!-- navigation 8~end -->
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_09.png" alt="">
+                        <span>무침</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_10.png" alt="">
+                        <span>알뜰 반찬</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_11.png" alt="">
+                        <span>봄맞이 반찬</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_12.png" alt="">
+                        <span>신제품</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_13.png" alt="">
+                        <span>아이 식단</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_14.png" alt="">
+                        <span>가족식단</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_15.png" alt="">
+                        <span>무침</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_16.png" alt="">
+                        <span>볶음</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_17.png" alt="">
+                        <span>볶음</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_18.png" alt="">
+                        <span>볶음</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_19.png" alt="">
+                        <span>볶음</span>
+                    </a></li>
+                <li><a href="sub.html" target="_self">
+                        <img src="img/mainNav/main_20.png" alt="">
+                        <span>볶음</span>
+                    </a></li>
+            </ul>
+        </div>
+    </nav>
 
     <div class="nav_more">
         <button><span>더보기</span><img src="img/icon/icon-arrow-down.svg" alt=""></button>
@@ -96,7 +178,7 @@
     </div>
 
     <!-- 부담없는 알뜰 반찬 -->
-    <section>
+    <section id="section_1">
         <div class="section_head">
             <h2>부담없는 알뜰 반찬</h2>
             <p>
@@ -106,7 +188,7 @@
 
         </div>
         <div class="banchan_list banchan_list_rec">
-            <div class="product">
+            <!-- <div class="product">
                 <a href="#">
                     <img src="img/39_ZIP_P_5005_T.jpg" alt="무나물">
                     <div class="prd_discription">
@@ -185,7 +267,7 @@
                     <p>탱글한 소시지와 신선한 야채의 만남</p>
                     <h5>3,800원</h5>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -207,6 +289,7 @@
             </p>
         </div>
         <div class="banchan_list banchan_list_rec">
+            <div class="prev"><img src="img/icon/icon-arrow-left-a3a3a3-24.svg"></div>
             <div class="product">
                 <img src="img/1422_ZIP_P_5150_T.jpg" alt="새콤 오이무생채">
                 <div class="prd_discription">
@@ -243,6 +326,7 @@
                     <h5>3,800원</h5>
                 </div>
             </div>
+            <div class="next"><img src="img/icon/icon-arrow-right-a3a3a3-24.svg"></div>
         </div>
     </section>
 
@@ -252,6 +336,7 @@
             <h2>새로 나온 반찬</h2>
         </div>
         <div class="banchan_list banchan_list_rec">
+            <div class="prev"><img src="img/icon/icon-arrow-left-a3a3a3-24.svg"></div>
             <div class="product">
                 <img src="img/1409_ZIP_P_5146_T.jpg" alt="새콤달콤 돌나무무침">
                 <div class="prd_discription">
@@ -288,6 +373,7 @@
                     <h5>2,800원</h5>
                 </div>
             </div>
+            <div class="next"><img src="img/icon/icon-arrow-right-a3a3a3-24.svg"></div>
         </div>
     </section>
 
@@ -580,6 +666,7 @@
             <span>조림</span>
         </div>
         <div class="banchan_list banchan_list_tall">
+            <div class="prev"><img src="img/icon/icon-arrow-left-a3a3a3-24.svg"></div>
             <div class="product">
                 <img src="img/2190_ZIP_P_9529_a_re.png" alt="">
                 <div class="prd_discription">
@@ -616,6 +703,7 @@
                     <h5>4,800원</h5>
                 </div>
             </div>
+            <div class="next"><img src="img/icon/icon-arrow-right-a3a3a3-24.svg"></div>
         </div>
     </section>
 
