--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link href="css/main.css" rel="stylesheet">
 
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.7.0.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/category.js"></script>
+    <script src="./js/altel.js"></script>
+    <script src="./js/kid.js"></script>
+    <script src="./js/new.js"></script>
 </head>
 
 <body>
@@ -79,91 +82,11 @@
         <div class="main_nav" id="main_nav_1">
             <ul>
                 <!-- navigation 0~7 -->
-                <!-- <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_01.png" alt="">
-                        <span>첫 만남</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_02.png" alt="">
-                        <span>알뜰 반찬</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_03.png" alt="">
-                        <span>봄맞이 반찬</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_04.png" alt="">
-                        <span>신제품</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_05.png" alt="">
-                        <span>아이 식단</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_06.png" alt="">
-                        <span>가족식단</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_07.png" alt="">
-                        <span>무침</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_08.png" alt="">
-                        <span>볶음</span>
-                    </a></li> -->
             </ul>
         </div>
         <div class="main_nav" id="main_nav_2">
             <ul>
                 <!-- navigation 8~end -->
-                <!-- <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_09.png" alt="">
-                        <span>무침</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_10.png" alt="">
-                        <span>알뜰 반찬</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_11.png" alt="">
-                        <span>봄맞이 반찬</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_12.png" alt="">
-                        <span>신제품</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_13.png" alt="">
-                        <span>아이 식단</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_14.png" alt="">
-                        <span>가족식단</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_15.png" alt="">
-                        <span>무침</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_16.png" alt="">
-                        <span>볶음</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_17.png" alt="">
-                        <span>볶음</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_18.png" alt="">
-                        <span>볶음</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_19.png" alt="">
-                        <span>볶음</span>
-                    </a></li>
-                <li><a href="sub.html" target="_self">
-                        <img src="img/mainNav/main_20.png" alt="">
-                        <span>볶음</span>
-                    </a></li> -->
             </ul>
         </div>
     </nav>
@@ -188,52 +111,10 @@
 
         </div>
         <div class="banchan_list banchan_list_rec">
-            <!-- <div class="product">
-                <a href="#">
-                    <img src="img/39_ZIP_P_5005_T.jpg" alt="무나물">
-                    <div class="prd_discription">
-                        <span class="prd_tag tag_2">맵지않음</span>
-                        <h4>무나물</h4>
-                        <p>쭉 익혀서 먹기 편해요</p>
-                        <h5>2,800원</h5>
-                    </div>
-                </a>
-            </div>
+            <!-- 01_altelbanchan.json list -->
+<!--        예시
             <div class="product">
-                <a href="#">
-                    <img src="img/86_ZIP_P_6008_T.jpg" alt="미역줄기볶음">
-                    <div class="prd_discription">
-                        <span class="prd_tag tag_1">인기</span><span class="prd_tag tag_2">맵지않음</span>
-                        <h4>미역줄기볶음</h4>
-                        <p>쭉 익혀서 먹기 편해요</p>
-                        <h5>2,800원</h5>
-                    </div>
-                </a>
-            </div>
-            <div class="product">
-                <a href="#">
-                    <img src="img/71_ZIP_P_6001_T.jpg" alt="감자채볶음">
-                    <div class="prd_discription">
-                        <span class="prd_tag tag_1">인기</span><span class="prd_tag tag_2">맵지않음</span>
-                        <h4>감자채볶음</h4>
-                        <p>쭉 익혀서 먹기 편해요</p>
-                        <h5>2,800원</h5>
-                    </div>
-                </a>
-            </div>
-            <div class="product">
-                <a href="#">
-                    <img src="img/410_ZIP_P_4028_T.jpg" alt="한입 두부간장조림">
-                    <div class="prd_discription">
-                        <span class="prd_tag tag_2">맵지않음</span>
-                        <h4>한입 두부간장조림</h4>
-                        <p>쭉 익혀서 먹기 편해요</p>
-                        <h5>2,800원</h5>
-                    </div>
-                </a>
-            </div>
-            <div class="product">
-                <img src="img/1422_ZIP_P_5150_T.jpg" alt="새콤 오이무생채">
+                <img src="" alt="새콤 오이무생채">
                 <div class="prd_discription">
                     <span class="prd_tag tag_2">맵지않음</span>
                     <h4>새콤 오이무생채</h4>
@@ -241,34 +122,8 @@
                     <h5>2,800원</h5>
                 </div>
             </div>
-            <div class="product">
-                <img src="img/67_ZIP_P_4014_T.jpg" alt="간장 감자조림">
-                <div class="prd_discription">
-                    <span class="prd_tag tag_2">맵지않음</span>
-                    <h4>간장 감자조림</h4>
-                    <p>포근포근 잘 익혔어요요</p>
-                    <h5>3,500원</h5>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/1476_ZIP_P_5162_T.jpg" alt="마카로니 범벅">
-                <div class="prd_discription">
-                    <span class="prd_tag tag_2">맵지않음</span>
-                    <h4>마카로니 범벅</h4>
-                    <p>알록달록 다채로운</p>
-                    <h5>3,800원</h5>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/2360_ZIP_P_6336_T.png" alt="소세지 야채볶음">
-                <div class="prd_discription">
-                    <span class="prd_tag tag_3">신제품</span><span class="prd_tag tag_2">맵지않음</span>
-                    <h4>소세지 야채볶음</h4>
-                    <p>탱글한 소시지와 신선한 야채의 만남</p>
-                    <h5>3,800원</h5>
-                </div>
-            </div> -->
         </div>
+-->
     </section>
 
     <!-- 베너3 -->
@@ -280,7 +135,7 @@
 
 
     <!-- 어린이 반찬 -->
-    <section>
+    <section id="section_2">
         <div class="section_head">
             <h2>어린이 반찬</h2>
             <p>
@@ -290,53 +145,19 @@
         </div>
         <div class="banchan_list banchan_list_rec">
             <div class="prev"><img src="img/icon/icon-arrow-left-a3a3a3-24.svg"></div>
-            <div class="product">
-                <img src="img/1422_ZIP_P_5150_T.jpg" alt="새콤 오이무생채">
-                <div class="prd_discription">
-                    <span class="prd_tag tag_2">맵지않음</span>
-                    <h4>새콤 오이무생채</h4>
-                    <p>아이들이 먹기 좋은 깔끔한 무생채채</p>
-                    <h5>2,800원</h5>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/67_ZIP_P_4014_T.jpg" alt="간장 감자조림">
-                <div class="prd_discription">
-                    <span class="prd_tag tag_2">맵지않음</span>
-                    <h4>간장 감자조림</h4>
-                    <p>포근포근 잘 익혔어요요</p>
-                    <h5>3,500원</h5>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/1476_ZIP_P_5162_T.jpg" alt="마카로니 범벅">
-                <div class="prd_discription">
-                    <span class="prd_tag tag_2">맵지않음</span>
-                    <h4>마카로니 범벅</h4>
-                    <p>알록달록 다채로운</p>
-                    <h5>3,800원</h5>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/2360_ZIP_P_6336_T.png" alt="소세지 야채볶음">
-                <div class="prd_discription">
-                    <span class="prd_tag tag_3">신제품</span><span class="prd_tag tag_2">맵지않음</span>
-                    <h4>소세지 야채볶음</h4>
-                    <p>탱글한 소시지와 신선한 야채의 만남</p>
-                    <h5>3,800원</h5>
-                </div>
-            </div>
             <div class="next"><img src="img/icon/icon-arrow-right-a3a3a3-24.svg"></div>
+            <!-- 02_kidbanchan.json list -->
         </div>
     </section>
 
     <!-- 새로 나온 반찬 -->
-    <section>
+    <section id="section_3">
         <div class="section_head">
             <h2>새로 나온 반찬</h2>
         </div>
         <div class="banchan_list banchan_list_rec">
             <div class="prev"><img src="img/icon/icon-arrow-left-a3a3a3-24.svg"></div>
+<!--
             <div class="product">
                 <img src="img/1409_ZIP_P_5146_T.jpg" alt="새콤달콤 돌나무무침">
                 <div class="prd_discription">
@@ -346,33 +167,7 @@
                     <h5>4,800원</h5>
                 </div>
             </div>
-            <div class="product">
-                <img src="img/1410_ZIP_P_5147_T.jpg" alt="향긋한 봄나물무침">
-                <div class="prd_discription">
-                    <span class="prd_tag tag_3">신제품</span><span class="prd_tag tag_4">제철반찬</span>
-                    <h4>향긋한 봄나물무침</h4>
-                    <p>봄냄새 가득 담은 요리!</p>
-                    <h5>2,800원</h5>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/1951_ZIP_P_1061_T.jpg" alt="한돈 버섯고추장찌개">
-                <div class="prd_discription">
-                    <span class="prd_tag tag_3">신제품</span>
-                    <h4>한돈 버섯고추장찌개</h4>
-                    <p>서늘한 바람 불 때, 얼큰함 한 숫갈</p>
-                    <h5>2,800원</h5>
-                </div>
-            </div>
-            <div class="product">
-                <img src="img/1792_ZIP_P_5121_T.png" alt="풋마늘무침">
-                <div class="prd_discription">
-                    <span class="prd_tag tag_3">신제품</span><span class="prd_tag tag_4">제철반찬</span>
-                    <h4>새콤달콤 풋마늘무침</h4>
-                    <p>입맛 살리는 톡 쏘는 맛</p>
-                    <h5>2,800원</h5>
-                </div>
-            </div>
+-->
             <div class="next"><img src="img/icon/icon-arrow-right-a3a3a3-24.svg"></div>
         </div>
     </section>
