--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="./js/altel.js"></script>
     <script src="./js/kid.js"></script>
     <script src="./js/new.js"></script>
+    <script src="./js/ranking.js"></script>
 </head>
 
 <body>
@@ -178,7 +179,7 @@
     </div>
 
     <!-- 이번주 정기식단 -->
-    <section>
+    <section section_4>
         <div class="section_head">
             <h2>이번주 정기식단</h2>
             <p>
@@ -209,59 +210,25 @@
                 <div class="regular_list_contain"> <!-- 식단 1 -->
                     <h4>2월 25~27일 (화/수/목)</h4>
                     <ul>
+                        <!-- 1번째 반찬 리스트 -->
+<!-- 
                         <li>
                             <img src="img/1349_ZIP_P_0094_T.jpg" alt="">
                             <p>소불고기_반조리</p>
                         </li>
-                        <li>
-                            <img src="img/1948_ZIP_P_6389_T.jpg" alt="">
-                            <p>고구마 맛탕</p>
-                        </li>
-                        <li>
-                            <img src="img/135_ZIP_P_5012_T.jpg" alt="">
-                            <p>참나물무침</p>
-                        </li>
-                        <li>
-                            <img src="img/1785_ZIP_P_6293_T.jpg" alt="">
-                            <p>케찹두부조림 - 120g</p>
-                        </li>
-                        <li>
-                            <img src="img/1187_ZIP_P_6206_T.jpg" alt="">
-                            <p>가지강정</p>
-                        </li>
-                        <li>
-                            <img src="img/137_ZIP_P_4003_T.jpg" alt="">
-                            <p>메추리알 간장조림 - 110g</p>
-                        </li>
+-->                        
                     </ul>
                 </div>
                 <div class="regular_list_contain"> <!-- 식단 2 -->
                     <h4>2월 28일~3월 3일 (금/토/월)</h4>
                     <ul>
+                        <!-- 2번째 반찬 리스트 -->
+<!-- 
                         <li>
-                            <img src="img/1337_ZIP_P_0090_T.jpg" alt="">
-                            <p>순살 닭볶음탕</p>
+                            <img src="img/1349_ZIP_P_0094_T.jpg" alt="">
+                            <p>소불고기_반조리</p>
                         </li>
-                        <li>
-                            <img src="img/1187_ZIP_P_6206_T.jpg" alt="">
-                            <p>가지강정</p>
-                        </li>
-                        <li>
-                            <img src="img/1201_ZIP_P_6220_T.jpg" alt="">
-                            <p>들깨시래기볶음</p>
-                        </li>
-                        <li>
-                            <img src="img/36_ZIP_P_5003_T.jpg" alt="">
-                            <p>콩나물무침</p>
-                        </li>
-                        <li>
-                            <img src="img/52_ZIP_P_4007_T.jpg" alt="">
-                            <p>연근조림</p>
-                        </li>
-                        <li>
-                            <img src="img/335_ZIP_P_5038_T.jpg" alt="">
-                            <p>파래김무침</p>
-                        </li>
+-->        
                     </ul>
                 </div>
 
@@ -279,7 +246,7 @@
     </section>
 
     <!-- 반찬 순위 -->
-    <section>
+    <section section_5>
         <div class="section_head">
             <h2>반찬 순위</h2>
             <p>최근 2주간 반찬 순위에요!</p>
@@ -293,10 +260,12 @@
                 </ul>
             </div>
             <div class="rank_list">
+                <!-- ranking list -->
+<!--
                 <div class="product_rank">
                     <div>
                         <img src="img/17_ZIP_P_6014_T.jpg" alt="">
-                        <!-- <button action=""></button>/ -->
+                        <button action=""></button>
                     </div>
                     <div class="prd_discription">
                         <span class="prd_tag tag_3">인기</span><span class="prd_tag tag_3">맵지않음</span>
@@ -305,72 +274,13 @@
                         <h5>4,800원</h5>
                     </div>
                 </div>
-                <div class="product_rank">
-                    <div>
-                        <img src="img/38_ZIP_P_5004_T.jpg" alt="">
-                        <!-- <button action=""></button>/ -->
-                    </div>
-                    <div class="prd_discription">
-                        <span class="prd_tag tag_3">인기</span><span class="prd_tag tag_3">맵지않음</span>
-                        <h4>무생채</h4>
-                        <p>잔멸치와 호두가 만나 짭쪼름하지만 고소하게!</p>
-                        <h5>4,800원</h5>
-                    </div>
-                </div>
-                <div class="product_rank">
-                    <div>
-                        <img src="img/86_ZIP_P_6008_T.jpg" alt="">
-                        <!-- <button action=""></button>/ -->
-                    </div>
-                    <div class="prd_discription">
-                        <span class="prd_tag tag_3">인기</span><span class="prd_tag tag_3">맵지않음</span>
-                        <h4>미역줄기볶음</h4>
-                        <p>잔멸치와 호두가 만나 짭쪼름하지만 고소하게!</p>
-                        <h5>4,800원</h5>
-                    </div>
-                </div>
-                <div class="product_rank">
-                    <div>
-                        <img src="img/71_ZIP_P_6001_T.jpg" alt="">
-                        <!-- <button action=""></button>/ -->
-                    </div>
-                    <div class="prd_discription">
-                        <span class="prd_tag tag_3">인기</span><span class="prd_tag tag_3">맵지않음</span>
-                        <h4>호두 멸치 볶음</h4>
-                        <p>잔멸치와 호두가 만나 짭쪼름하지만 고소하게!</p>
-                        <h5>4,800원</h5>
-                    </div>
-                </div>
-                <div class="product_rank">
-                    <div>
-                        <img src="img/36_ZIP_P_5003_T.jpg" alt="">
-                        <!-- <button action=""></button>/ -->
-                    </div>
-                    <div class="prd_discription">
-                        <span class="prd_tag tag_3">인기</span><span class="prd_tag tag_3">맵지않음</span>
-                        <h4>호두 멸치 볶음</h4>
-                        <p>잔멸치와 호두가 만나 짭쪼름하지만 고소하게!</p>
-                        <h5>4,800원</h5>
-                    </div>
-                </div>
-                <div class="product_rank">
-                    <div>
-                        <img src="img/39_ZIP_P_5005_T.jpg" alt="">
-                        <!-- <button action=""></button>/ -->
-                    </div>
-                    <div class="prd_discription">
-                        <span class="prd_tag tag_3">인기</span><span class="prd_tag tag_3">맵지않음</span>
-                        <h4>호두 멸치 볶음</h4>
-                        <p>잔멸치와 호두가 만나 짭쪼름하지만 고소하게!</p>
-                        <h5>4,800원</h5>
-                    </div>
-                </div>
+-->
             </div>
         </div>
     </section>
 
     <!-- 고객이 추천하는 찐 추천 반찬 -->
-    <section>
+    <section section_6>
         <div class="section_head">
             <h2>고객이 추천하는 찐 추천 반찬</h2>
         </div>
@@ -446,7 +356,7 @@
     </section>
 
     <!-- MD 추천반찬 -->
-    <section>
+    <section section_7>
         <div class="section_head">
             <h2>MD 추천반찬</h2>
             <p>이번 주 가장 추천하는 제품만 골라드려요.</p>
