add ranking tab

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </div>
 
     <!-- 이번주 정기식단 -->
-    <section section_4>
+    <section id="section_4">
         <div class="section_head">
             <h2>이번주 정기식단</h2>
             <p>
@@ -246,7 +246,7 @@
     </section>
 
     <!-- 반찬 순위 -->
-    <section section_5>
+    <section id="section_5">
         <div class="section_head">
             <h2>반찬 순위</h2>
             <p>최근 2주간 반찬 순위에요!</p>
@@ -280,7 +280,7 @@
     </section>
 
     <!-- 고객이 추천하는 찐 추천 반찬 -->
-    <section section_6>
+    <section id="section_6">
         <div class="section_head">
             <h2>고객이 추천하는 찐 추천 반찬</h2>
         </div>
@@ -323,7 +323,7 @@
     </section>
 
     <!-- MD 추천반찬 -->
-    <section section_7>
+    <section id="section_7">
         <div class="section_head">
             <h2>MD 추천반찬</h2>
             <p>이번 주 가장 추천하는 제품만 골라드려요.</p>
